--- a/apps/web/src/style.css
+++ b/apps/web/src/style.css
@@ -4,6 +4,7 @@
   left: 0;
   top: 0;
   background-color: oklch(0.21 0.034 264.665);
+  font-weight: bold;
   color: white;
   position: absolute;
   display: flex;
@@ -18,12 +19,16 @@
   width: 125px;
 }
 
-#loading-progress {
+#loading-status {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
+}
+
+#loading-status[hidden] {
+  display: none !important;
 }
 
 #loading-bar {
@@ -40,6 +45,28 @@
   width: 0;
   background-color: #973fff;
   transition: width 0.3s ease-in-out;
+}
+
+#loader-error {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+#loader-error[hidden] {
+  display: none !important;
+}
+
+#back-home {
+  background-color: rgba(151, 63, 255, 0.8);
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: large;
+  color: white;
+  padding: 10px;
 }
 
 .fade-out {
