--- a/apps/web/src/style.css
+++ b/apps/web/src/style.css
@@ -7,6 +7,7 @@
   font-weight: bold;
   color: white;
   position: absolute;
+  z-index: 1000;
   display: flex;
   flex-direction: column;
   justify-content: center;
